<resources>
    <string name="app_name">Mulligan Marker</string>

    <string name="player_list_header">Player List</string>

    <string name="new_round">New Round</string>
    <string name="new_player">New Player</string>
    <string name="new_scorecard_header">Select the players for the round</string>
    <string name="create_new_title">Create new</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="handicap_hint">Handicap</string>

    <string name="save">Save</string>
    <string name="start">Start</string>

    <string name="player_firstName">First Name</string>
    <string name="player_lastName">Last Name</string>
    <string name="player_email">Email</string>
    <string name="player_phoneNumber">Phone Number</string>
    <string name="player_handicap">Handicap</string>

    <string name="round_course">Course</string>
    <string name="round_date">Date</string>
    <string name="round_status">Status</string>

    <string name="course_name">Name</string>
    <string name="course_location">Location</string>

    <string name="course_picker_hint">Select the course</string>

    <string name="round_history_Title">Round history</string>

    <string name="score_picker_title">Score For Current Hole:</string>

    <string name="player_Initial">Player Name</string>
    <string name="hole_title">Hole</string>
    <string name="par_title">Par</string>
    <string name="score_title">Score</string>

    <string name="player">Player</string>
    <string name="player_dropdown_hint">Select player: </string>

    <string name="tee_box">Tee Box</string>
    <string name="tee_box_dropdown_hint">Select tee box: </string>

    <string name="course">Course</string>
    <string name="course_dropdown_hint">Select course: </string>

    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="holes">Holes</string>
    <string name="pars">Pars</string>
    <string name="birdies">Birdies</string>
    <string name="eagles">Eagles</string>
    <string name="avg_score_overall">Avg. Score Overall</string>
    <string name="avg_score_front">Avg. Score Front 9</string>
    <string name="avg_score_back">Avg. Score Back 9</string>
    <string name="best_score_overall">Best Score Overall</string>
    <string name="best_score_front">Best Score Front 9</string>
    <string name="best_score_back">Best Score Back 9</string>
    <string name="stat_placeholder">--</string>
</resources>