<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/layout_border"

    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_green"
            android:text="@string/player_firstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_green"
            android:text="@string/player_lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_firstName"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/player_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_email"
        android:textColor="@color/light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_phoneNum" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/player_phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_green"
        android:text="@string/player_phoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/player_handicap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_green"
        android:text="@string/player_handicap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>